[package]
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
categories = ["wasm"]
description = "Drawing circles with quicksilver/lyon"
license = "Apache-2.0/MIT"
name = "quicksilver-points"
readme = "./README.md"
repository = "https://github.com/pka/wasm-2d-experiments"
version = "0.1.0"
edition = "2018"

[dependencies]
quicksilver = { version = "0.3.16", default-features = false, features = [ "lyon" ] }
