[package]
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
categories = ["wasm"]
description = "Drawing circles into web canvas"
license = "Apache-2.0/MIT"
name = "raqote-points"
readme = "./README.md"
repository = "https://github.com/pka/wasm-2d-experiments"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
wasm-bindgen = "0.2.29"
raqote = { version = "0.7.0", default-features = false } # without font-kit
log = "0.4.6"
rand = { version = "0.7.0", features = ["wasm-bindgen"] }
wasm-logger = "0.1.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however. Also as of wee_alloc v0.4.2, does not yet work on stable
# (tested with rust v1.31.1).
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.10"
features = ["CanvasRenderingContext2d", "Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement"]

[features]
default = ["console_error_panic_hook"]
